# nrs_imitation

./: .gitignore  README.md
analysis_logs/camera_jitter/20260428_1131_episodes_ft/: best_worst_report.txt  jitter_summary.csv
behavior_ws/: README.md
behavior_ws/src/dynamixel_joy_controller/: README.md  package.xml  setup.cfg  setup.py
behavior_ws/src/dynamixel_joy_controller/config/: f710_gripper_joy.yaml
behavior_ws/src/dynamixel_joy_controller/dynamixel_joy_controller/: __init__.py  f710_gripper_joy_controller.py
behavior_ws/src/dynamixel_joy_controller/launch/: f710_gripper_joy.launch.py
behavior_ws/src/dynamixel_joy_controller/resource/: dynamixel_joy_controller
behavior_ws/src/dynamixel_joy_controller/test/: test_copyright.py  test_flake8.py  test_pep257.py
behavior_ws/src/nrs_ft_aq2/: CMakeLists.txt  package.xml
behavior_ws/src/nrs_ft_aq2/config/: VR_config.yaml  config.yaml
behavior_ws/src/nrs_ft_aq2/mesh/: tcp_under_polishing.stl
behavior_ws/src/nrs_ft_aq2/src/: FT_Processing.cpp  FT_Processing.hpp
behavior_ws/src/nrs_imitation/: README.md  package.xml  setup.py
behavior_ws/src/nrs_imitation/filter/: filter_cmd_continue9D.py
behavior_ws/src/nrs_imitation/launch/: inference_gradcam_dual_cam.launch.py  inference_gradcam_gripper_single_cam.launch.py  inference_gradcam_single_cam.launch.py  vr_demo_joy_controller.launch.py
behavior_ws/src/nrs_imitation/nrs_imitation/: __init__.py  gripper_demo_txt_recorder.py  gripper_hdf5_recorder.py  gripper_hdf5_recorder_base.py  gripper_hdf5_recorder_dual_cam.py  gripper_hdf5_recorder_single_cam.py  hdf5_recorder_base.py  hdf5_recorder_dual_cam.py  hdf5_recorder_single_cam.py  hdf5_recorder_single_cam_stain_mask.py  inference_core.py  inference_dual_cam.py  inference_gripper_single_cam.py  inference_single_cam.py  node_act_cmdmotion_infer_act_diffusion.py  node_check_inference.py  node_cmdmotion_infer.py  pretty_print.py  recorder_sync.py  robot_playback_multimodal_hdf5_recorder.py  stage1_filtering.py  stain_mask_publisher.py  vr_demo_hdf5_recorder _old.py  vr_demo_hdf5_recorder.py  vr_demo_joy_controller.py  vr_demo_txt_recorder.py  vr_stage1_episode_pusher.py  vr_stage1_hdf5_recorder.py
behavior_ws/src/nrs_imitation/test/: test_recorder_sync.py
behavior_ws/src/nrs_imitation/txtcmd/: cmd_continue9D.txt  gripper_cmd_continue11D.txt
behavior_ws/src/nrs_imitation/yaml/: vr_demo_recorder.yaml
behavior_ws/src/umi_ros2/: README.md  package.xml  setup.cfg  setup.py
behavior_ws/src/umi_ros2/config/: umi_grp.yaml  umi_grp_sub.yaml
behavior_ws/src/umi_ros2/launch/: umi_grp.launch.py  umi_grp_sub.launch.py
behavior_ws/src/umi_ros2/scripts/: umi_grp.py  umi_grp_sub.py  umi_grp_sub_pwm.py
behavior_ws/src/umi_ros2/umi_ros2/: __init__.py  dxl_ping_scan.py  dxl_port_handler.py  umi_grp.py  umi_grp_sub.py  umi_grp_sub_pwm.py
behavior_ws/src/vive_tracker_ros2/vive_tracker_ros2/: test_calibration.py  vive_tracker_node.py
behavior_ws/src/vive_tracker_ros2/yaml/: calibration_matrix (copy).yaml  calibration_matrix.yaml
behavior_ws/src/vr_calibration/: CMakeLists.txt  README.md  package.xml
behavior_ws/src/vr_calibration/data/: for_vr_calibration_point.txt  for_vr_calibration_point_v3.txt
behavior_ws/src/vr_calibration/src/: vr_calibration.cpp
behavior_ws/src/vr_calibration/txt/: for_vr_calibration_point.txt  for_vr_calibration_point_v2.txt  for_vr_calibration_point_v3.txt  for_vr_calibration_point_v4.txt  for_vr_calibration_point_v5.txt  for_vr_calibration_point_v6.txt  ur10_ee.txt  ur10_vr.txt
scripts/: README.md
scripts/act/: train_act.py  train_act_dual_cam.py  train_act_single_cam.py
scripts/diffusion/: train_diffusion.py
scripts/flow/: flow_train_core.py  train_flow.py  train_flow_dual_cam.py  train_flow_gripper.py  train_flow_gripper_single_cam.py  train_flow_single_cam.py  train_runtime.py
source/common/: fs.py
source/custom/: _imitation_form_converter.py  check_cam_serial.py  convert_gripper_tick_range.py  demo_data_act_form_single_cam.py  demo_data_imitation_form.py  demo_data_imitation_form_dual_cam.py  demo_data_imitation_form_single_cam.py  gripper_data_imitation_form.py  gripper_data_imitation_form_single_cam.py  visualize_hdf5_rgb_jitter.py
source/data/: dataset.py  loader.py  normalization.py
source/models/: act_core.py  diffusion_core.py  encoder.py  flow_core.py  gri_encoder.py  gri_flow_core.py  policy.py  stain_pooling.py
source/training/: engine.py
tmp/: cmd_continue9D.txt
tmp/stage1_pusher_debug/: 0000_episode_0000_slow_contact.txt  0000_episode_0000_slow_contact_meta.txt  0001_episode_0001_slow_contact.txt  0001_episode_0001_slow_contact_meta.txt
