<?xml version="1.0"?>
<package format="3">
  <name>nrs_ft_aq2</name>
  <version>0.0.1</version>
  <description>ROS2 port of NRS_FT_AQ</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime / build deps (nodes에서 실제로 쓰는 것들) -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ament_index_cpp</depend>

  <!-- 지금은 rosidl로 msg를 만들지 않으니까 아래는 전부 뺀다
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
